staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facilgo-api-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facilgo-api
  template:
    metadata:
      labels:
        app: facilgo-api
    spec:
      containers:
        - name: facilgo-api
          image: nkoppalafacilgo/facilgo_api:latest
          imagePullSecrets:
            - name: dckr_pat_gUoRMw6To2z0I6ZriDiUHWQbLhY
---
apiVersion: v1
kind: Service
metadata:
  name: facilgo-api-srv
spec:
  selector:
    app: facilgo-api
  ports:
    - name: facilgo-api
      protocol: TCP
      port: 8000
      targetPort: 8000
