staging/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: exp.facilgo.com
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: api-srv
              port:
                number: 8000
